fix spacing before recipient answer form #304

--- a/app/assets/stylesheets/modules/answers.sass
+++ b/app/assets/stylesheets/modules/answers.sass
@@ -45,6 +45,7 @@ section.question div.recipient_answer
         padding: 0 8px 0 6px
 
 .recipient-answer-form
+  margin-top: 40px
   +gray-container(90%)
   overflow: auto
   textarea
